--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
     "name": "form-validation",
-    "version": "0.1.0",
+    "version": "0.3.0",
     "private": true,
-    "dependencies": {
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-scripts": "5.0.0"
-    },
     "scripts": {
         "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "build": "react-scripts build"
+    },
+    "dependencies": {
+        "formik": "^2.2.9",
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0",
+        "yup": "^0.32.11"
+    },
+    "devDependencies": {
+        "react-scripts": "5.0.1"
     },
     "browserslist": {
         "production": [
