--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "build": "react-scripts build"
     },
     "dependencies": {
+        "@hookform/resolvers": "^2.9.1",
         "formik": "^2.2.9",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
