--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "formik": "^2.2.9",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
+        "react-hook-form": "^7.33.0",
         "yup": "^0.32.11"
     },
     "devDependencies": {
